# banjoc

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  rustfmt.toml
banjo-wasm/: Cargo.toml
banjoc/: Cargo.toml
banjoc/src/: ast.rs  chunk.rs  compiler.rs  disassembler.rs  error.rs  func_compiler.rs  gc.rs  lib.rs  native_functions.rs  obj.rs  op_code.rs  output.rs  parser.rs  scanner.rs  stack.rs  table.rs  value.rs  vm.rs
banjoc/tests/: const.json  const.output.json  err.gv  files.rs  fn_order.json  fn_order.output.json  param_var.json  param_var.output.json  sum.json  sum.output.json  sum_list.json  sum_list.output.json  unused_call.json  unused_call.output.json  var.json  var.output.json
cli/: Cargo.toml
cli/src/: main.rs
src/: chunk.rs  compiler.rs  disassembler.rs  error.rs  func_compiler.rs  gc.rs  graph_compiler.rs  main.rs  obj.rs  old_parser.rs  op_code.rs  parser.rs  scanner.rs  stack.rs  table.rs  value.rs  vm.rs
tests/: arity.json  callstack.lox  class.lox  closure.lox  digraph.gv  err.gv  fib.lox  fn_order.json  fun.lox  if.lox  literal.json  param_var.json  results.json  runtime.json  scope.lox  scopes.lox  sum.gv  sum.json  sum2.gv  super.lox  unused_call.json  while.lox
wasm/: Cargo.toml
wasm/src/: lib.rs
