[package]
name = "banjoc"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug_print_code", "debug_trace_execution"]
debug_trace_execution = []
debug_print_code = []
debug_log_gc = []
debug_stress_gc = []

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.99"
